Fixed recipe card width issue on small screens

--- a/src/components/recipeGallery.module.scss
+++ b/src/components/recipeGallery.module.scss
@@ -22,3 +22,12 @@
 .light.cardContent {
     background-color: white;
 }
+
+@media only screen and (max-width: 800px) {
+    .card {
+        margin: 10px 0px 10px 0px;
+        width: 100vw;
+        max-width: 400px;
+        border-radius: 0 !important;
+    }
+}
